Added the ability to create an input for the number of sides of a dice on a given roll

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 </head>
 <body>
     <h1>Dice Rolling Game</h1>
-
+    <h2>How many sides to your dice?</h2>
+    <h5>Default: 6</h5>
+    <input type='text' name='sideInput' id='sideInput'>
+    <button id='sideButton'>Set sides</button>
+    <div id='sideResponseSpot'></div>
+    
+    <h2>How many rolls?</h2>
     <input type='text' name='playerInput' id='playerInput'>
 <button id='rollButton'>Roll!</button>
 <h1 id='resultSpot'></h1>
 <button id='showRolls'> Show all Rolls</button>
 <div id='rollsSpot'></div>
+
+
+<h5>Reset?</h5>
+<button id='resetButton'>Click me!</button>
 
 <script src='./assets/javascript/main.js'></script>
 </body>
